--- a/page2.html
+++ b/page2.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Learn API's</title>
+    <link rel="stylesheet" type="text/css" href="vendor/styles/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="vendor/styles/css/bootstrap-theme.css">
+  </head>
+  <body>
+    <nav role="navigation" class="navbar navbar-default">
+      <section class="navbar-header">
+        <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+          <span class="sr-only">Toggle Navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </section>
+      <section id="navbarCollapse" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="#">Home</a></li>
+          <li class="active"><a href="#">Learn</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
+      </section>
+    </nav>
+    <main class="container">
+      <h2>Learn API's</h2>
+      <section class="row" id="about">
 
+
+      </section>
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+    <script src="vendor/styles/js/bootstrap.js"></script>
+  </body>
+</html>
