Added input boxes & container.

--- a/page2.html
+++ b/page2.html
@@ -26,11 +26,20 @@
     <main class="container">
       <h2>Learn API's</h2>
       <section class="row" id="about">
+        <container>
+          <p>
+            Text here showing example of how to run an API in code.
 
-
+          </p>
+        </container>
       </section>
-
-
+      <span class="user-input">
+        <input class="inputOne"></input>
+        <input class="inputTwo"></input>
+      </span>
+      <section>
+<!--       display the Respsonse JSON file data here -->
+      </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
     <script src="vendor/styles/js/bootstrap.js"></script>
