Changed the nav links to work with the page2 & about html pages.

--- a/about.html
+++ b/about.html
@@ -20,9 +20,9 @@
         <!-- Collection of nav links and other content for toggling -->
         <section id="navbarCollapse" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Learn</a></li>
-                <li class="active"><a href="#">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="page2.html">Learn</a></li>
+                <li class="active"><a href="about.html">About</a></li>
             </ul>
         </section>
     </nav>
