--- a/page2.html
+++ b/page2.html
@@ -17,9 +17,9 @@
       </section>
       <section id="navbarCollapse" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li class="active"><a href="#">Learn</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
       </section>
     </nav>
