Revert "Made comment on location for JSON data."
This reverts commit 4146fab252f0ce7d57ddd0cdc910360dd9eb1c33.

--- a/page2.html
+++ b/page2.html
@@ -38,7 +38,7 @@
         <input class="inputTwo"></input>
       </span>
       <section>
-<!--       display the Respsonse JSON file data here --><p>JSON data here</p>
+<!--       display the Respsonse JSON file data here -->
       </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
