--- a/page2.html
+++ b/page2.html
@@ -29,7 +29,6 @@
         <container>
           <p>
             Text here showing example of how to run an API in code.
-
           </p>
         </container>
       </section>
@@ -38,9 +37,8 @@
         <input class="inputTwo"></input>
       </span>
       <section>
-<!--       display the Respsonse JSON file data here -->
+        <p>JSON file data here.</p>
       </section>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
     <script src="vendor/styles/js/bootstrap.js"></script>
   </body>
