Worked on page2.js functionality.

--- a/page2.html
+++ b/page2.html
@@ -37,6 +37,7 @@
         <input class="inputOne"></input>
         <input class="inputTwo"></input>
       </span>
+      <button class="input">Submit</button>
       <section>
         <p>JSON file data here.</p>
       </section>
