--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </ul>
       </form>
       <section id="VideoResults">
-        <ul class="list-unstyled"></ul>
+        <ul id="VideoDisplay"></ul>
       </section>
     </section>
 
