Adding controllers for article, index, and added route.js

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <!-- Collection of nav links and other content for toggling -->
         <section id="navbarCollapse" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="/">Home</a></li>
                 <li><a href="#">Learn</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="/about">About</a></li>
             </ul>
         </section>
     </nav>
@@ -80,7 +80,12 @@
     <script src="vendor/styles/js/bootstrap.js"></script>
     <script src="vendor/scripts/handlebars.js"></script>
     <script src="vendor/scripts/page.js"></script>
+
     <script src="scripts/index.js"></script>
+    <script src="scripts/indexController.js"></script>
+    <script src="scripts/aboutController.js"></script>
+
+    <script src="scripts/routes.js"></script>
 
   </body>
 
