Worked on page2.js functionality.

--- a/page2.html
+++ b/page2.html
@@ -29,19 +29,23 @@
         <container>
           <p>
             Text here showing example of how to run an API in code.
-
+            </br> <!--remove this break-->
+            First Input  Second Input
           </p>
         </container>
       </section>
-      <span class="user-input">
-        <input class="inputOne"></input>
-        <input class="inputTwo"></input>
-      </span>
-      <button class="input">Submit</button>
+      <form class="user-input">
+        <input class="inputOne" type="text" value="Search option 1"></input>
+        <input class="inputTwo" type="text"></input>
+      </form>
+      <input type="submit" value="Submit" class="input">
       <section>
         <p>JSON file data here.</p>
+        <ul class="list-unstyled"></ul>
       </section>
+    </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
     <script src="vendor/styles/js/bootstrap.js"></script>
+    <script src="scripts/page2.js"></script>
   </body>
 </html>
