--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <script src="scripts/indexController.js"></script>
     <script src="scripts/aboutController.js"></script>
 
-    <script src="scripts/routes.js"></script>
+    <!-- <script src="scripts/routes.js"></script> -->
 
   </body>
 
