--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 <script src="vendor/scripts/handlebars.js"></script>
 <script src="vendor/scripts/page.js"></script>
 <script src="scripts/index.js"></script>
-<script src="scripts/routes.js"></script>
+<script src="scripts/routes.js">
 
 </body>
 </html>
