Still working on page2 main functionality, added minor changes.

--- a/page2.html
+++ b/page2.html
@@ -4,6 +4,7 @@
     <title>Learn API's</title>
     <link rel="stylesheet" type="text/css" href="vendor/styles/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="vendor/styles/css/bootstrap-theme.css">
+    <link rel="stylesheet" type="text/css" href="styles/la">
   </head>
   <body>
     <nav role="navigation" class="navbar navbar-default">
@@ -34,15 +35,21 @@
           </p>
         </container>
       </section>
-      <form class="user-input">
-        <input class="inputOne" type="text" value="Search option 1"></input>
-        <input class="inputTwo" type="text"></input>
-      </form>
-      <input type="submit" value="Submit" class="input">
+
+
+      <section class="userInput">
+        <input class="inputOne" type="text" placeholder="Search option 1">
+        <input class="inputTwo" type="text" placeholder="Search option 2">
+
+        <input type="submit" value="Submit" class="button">
+      </section>
+
       <section>
         <p>JSON file data here.</p>
         <ul class="list-unstyled"></ul>
       </section>
+
+
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
     <script src="vendor/styles/js/bootstrap.js"></script>
