--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section id="navbarCollapse" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
-                <li><a href="#">Learn</a></li>
+                <li><a href="/page2">Learn</a></li>
                 <li><a href="/about">About</a></li>
             </ul>
         </section>
@@ -85,7 +85,7 @@
     <script src="scripts/indexController.js"></script>
     <script src="scripts/aboutController.js"></script>
 
-    <script src="scripts/routes.js"></script>
+   <!-- <script src="scripts/routes.js"></script>  -->
 
 
   </body>
