Coding the input button to call the requestVideos function, currently loads response from youtube. But does not play video.

--- a/page2.html
+++ b/page2.html
@@ -44,9 +44,9 @@
         <input type="submit" value="Submit" class="button">
       </section>
 
-      <section>
+      <section class="videoResults">
         <p>JSON file data here.</p>
-        <ul class="list-unstyled"></ul>
+        <ul class="videoDisplay"></ul>
       </section>
 
 
