made minor text changes

--- a/page2.html
+++ b/page2.html
@@ -48,7 +48,7 @@
                 <ol>
                   <li>$.get prepares the call.</li>
                   <li>A URL is specified to make the API call.</li>
-                  <li>'part' describes how the data is delivered in the response, in this case it is a "snippet".</li>
+                  <li>'part' describes how the data properties are delivered in the response, in this case it is comma separated list, or a "snippet".</li>
                   <li>'maxResults' displays the maximum number of videos to display</li>
                   <li>'viewCount' is specifing the number of views a video has as one of the search criteria. Or, show me videos with the highest view count.</li>
                   <li>'key' is the authorization key to ask for a request.</li>
@@ -83,7 +83,6 @@
           <p>
             For this second example, we will stay with the "Search" resource and explore a few more ways of finding videos based on a few parameters as made avaialble to "Search".
           </p>
-
 
         <section class="userInput">
           <input class="inputOne" type="text" placeholder="Search option 1">
