Working on getting ajax response to display results to html.  Made initial changes.

--- a/page2.html
+++ b/page2.html
@@ -39,8 +39,10 @@
         <input type="submit" value="Submit" class="button">
       </section>
       <section class="videoResults">
+        <ul id="videoDisplay" class="img-responsive"></ul>
+      </section>
+      <section class="jsonData">
         <p>JSON file data here.</p>
-        <ul class="videoDisplay"></ul>
       </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
