Finally got the ajax response to be able to append to the DOM!

--- a/page2.html
+++ b/page2.html
@@ -41,8 +41,8 @@
       <section class="videoResults">
         <ul id="videoDisplay" class="img-responsive"></ul>
       </section>
-      <section class="jsonData">
-        <p>JSON file data here.</p>
+      <section >
+        <p class="jsonData">JSON file data here.</p>
       </section>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
