fixed ajax data placement.

--- a/page2.html
+++ b/page2.html
@@ -24,6 +24,7 @@
         </ul>
       </section>
     </nav>
+
     <main class="container">
       <h1>Code Explained</h1>
 
@@ -72,13 +73,6 @@
           </ol>
       </section>
 
-      <section class="videoResults">
-        <ul id="videoDisplay" class="img-responsive"></ul>
-      </section>
-      <section >
-
-
-
       <section id="explain2">
         <h2>Customized Search</h2>
           <p>
@@ -97,11 +91,11 @@
           <input type="submit" value="Submit" class="button">
         </section>
         <section class="videoResults">
-           <p class="jsonData">JSON file data here.</p>
-          <ul class="videoDisplay"></ul>
+          <ul></ul>
         </section>
 
       </section>
+           <p class="jsonData"></p>
 
     </main>
 
