--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 
     <script src="scripts/index.js"></script>
     <script src="scripts/indexController.js"></script>
+    <script src="scripts/learnController.js"></script>
     <script src="scripts/aboutController.js"></script>
 
     <script src="scripts/routes.js"></script>
