Added route functionality to page2/learn

--- a/page2.html
+++ b/page2.html
@@ -102,5 +102,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
     <script src="vendor/styles/js/bootstrap.js"></script>
     <script src="scripts/page2.js"></script>
+    <script src="scripts/learnController.js"></script>
   </body>
 </html>
