--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
     <script src="vendor/scripts/page.js"></script>
 
     <script src="scripts/index.js"></script>
+    <script src="scripts/page2.js"></script>
     <script src="scripts/indexController.js"></script>
     <script src="scripts/learnController.js"></script>
     <script src="scripts/aboutController.js"></script>
