--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section id="navbarCollapse" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
-                <li><a href="/page2">Learn</a></li>
+                <li><a href="/learn">Learn</a></li>
                 <li><a href="/about">About</a></li>
             </ul>
         </section>
@@ -77,7 +77,7 @@
 
       <section id="VideoResults">
 
-        <ul id="VideoDisplay"></ul>
+        <ul id="VideoDisplay" class="list-unstyled"></ul>
       </section>
 
     </section>
