--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="vendor/styles/css/bootstrap.css">
     <link rel="stylesheet" href="vendor/styles/css/bootstrap-theme.css">
     <link rel="stylesheet" href="styles/layout.css">
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 
     <script id="video-template" type="text/x-handlebars-template">
         <h2>{{title}}</h2>
@@ -30,7 +31,7 @@
         <section id="navbarCollapse" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/">Home</a></li>
-                <li><a href="/page2">Learn</a></li>
+                <li><a href="/learn">Learn</a></li>
                 <li><a href="/about">About</a></li>
             </ul>
         </section>
@@ -77,7 +78,7 @@
 
       <section id="VideoResults">
 
-        <ul id="VideoDisplay"></ul>
+        <ul id="VideoDisplay" class="list-unstyled"></ul>
       </section>
 
     </section>
