--- a/page2.html
+++ b/page2.html
@@ -91,7 +91,7 @@
           <input type="submit" value="Submit" class="button">
         </section>
         <section class="videoResults">
-          <ul></ul>
+          <ul id="searchResults"></ul>
         </section>
 
       </section>
