changed page2 text and deleted console.log

--- a/page2.html
+++ b/page2.html
@@ -40,7 +40,7 @@
           <ol>
             <li>Start Fresh</li>
               <p>
-                The first part of the code is a JQuery function that finds to the '#html' id element as found in the web page as one of the Radio Controls. Once that form is clicked, it will run a statement to make sure that if a previous search result exists, to "emptyResults" so that only the new query results are displayed.
+                The first part of the code is creating an object called "videoList" to which a method is created using a JQuery function that finds the '#html' id element as one of the Radio Controls. Once that control is clicked, it will run a statement to make sure that if a previous search result exists, to "emptyResults" so that only the new query results are displayed.
                 <img class="img-responsive" src="img/YouTubeCode1.png" alt="YouTubeCodeSample1" />
               </p>
             <li>Call the API</li>
