--- a/page2.html
+++ b/page2.html
@@ -86,8 +86,8 @@
           </p>
 
         <section class="userInput">
-          <input class="inputOne" type="text" placeholder="Search option 1" name="inputOne">
-          <input class="inputTwo" type="text" placeholder="Search option 2" name="inputTwo">
+          <input class="inputOne" type="text" placeholder="Search options" name="inputOne">
+          <input class="inputTwo" type="text" placeholder="API Key" name="inputTwo">
           <input type="submit" value="Submit" class="button">
         </section>
         <section class="videoResults">
