added cursor pointer for radio buttons.

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
     <section>
       <form id="VideoSelection" action="index.html" method="post">
         <ul class="list-unstyled">
-          <li><input type="radio" name="prglanguage" id="html" value="html">HTML</li>
-          <li><input type="radio" name="prglanguage" id="css" value="css">CSS</li>
-          <li><input type="radio" name="prglanguage" id="javascript" value="javascript">JavaScript</li>
-          <li><input type="radio" name="prglanguage" id="ruby" value="ruby">Ruby</li>
-          <li><input type="radio" name="prglanguage" id="python" value="python">Python</li>
-          <li><input type="radio" name="prglanguage" id="objectivec" value="objectivec">Objective-C (for iOS)</li>
-          <li><input type="radio" name="prglanguage" id="swift" value="swift">Swift (for iOS)</li>
+          <li><input type="radio" name="prglanguage" style="cursor: pointer;" id="html" value="html">HTML</li>
+          <li><input type="radio" name="prglanguage" style="cursor: pointer;" id="css" value="css">CSS</li>
+          <li><input type="radio" name="prglanguage" style="cursor: pointer;" id="javascript" value="javascript">JavaScript</li>
+          <li><input type="radio" name="prglanguage" style="cursor: pointer;" id="ruby" value="ruby">Ruby</li>
+          <li><input type="radio" name="prglanguage" style="cursor: pointer;" id="python" value="python">Python</li>
+          <li><input type="radio" name="prglanguage" style="cursor: pointer;" id="objectivec" value="objectivec">Objective-C (for iOS)</li>
+          <li><input type="radio" name="prglanguage" style="cursor: pointer;" id="swift" value="swift">Swift (for iOS)</li>
         </ul>
       </form>
 
