--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title></title>
+<link rel="icon" type="image/png" href="img/youtubeicon.png">
 <link rel="stylesheet" href="vendor/styles/css/bootstrap.css">
 <link rel="stylesheet" href="vendor/styles/css/bootstrap-theme.css">
 </head>
