--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>YouTube API Tutorial</title>
+    <link rel="icon" type="image/png" href="img/youtubeicon.png">
     <link rel="stylesheet" href="vendor/styles/css/bootstrap.css">
     <link rel="stylesheet" href="vendor/styles/css/bootstrap-theme.css">
     <link rel="stylesheet" href="styles/layout.css">
