--- a/page2.html
+++ b/page2.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Learn API's</title>
+    <link rel="icon" type="image/png" href="img/youtubeicon.png">
     <link rel="stylesheet" type="text/css" href="vendor/styles/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="vendor/styles/css/bootstrap-theme.css">
     <link rel="stylesheet" type="text/css" href="styles/la">
