--- a/about.html
+++ b/about.html
@@ -44,13 +44,13 @@
         <h2>Links!</h2>
         <ul class="list-group">
           <li class="list-group-item">
-            Link 1
+            <p><a href="https://developers.google.com/youtube/">Youtube API Documentation</a></p>
           </li>
           <li class="list-group-item">
-            Link 2
+            <p><a href="https://www.getpostman.com/">Postman!</a></p>
           </li>
           <li class="list-group-item">
-            Link 3
+            <p><a href="http://codefellows.com">CodeFellows</a></p>
           </li>
         </ul>
       </section>
