--- a/about.html
+++ b/about.html
@@ -28,20 +28,23 @@
         </section>
     </nav>
     <main class="container">
-      <h2> About</h2>
+      <h2>Team Members</h2>
       <section class="row" id="about">
         <article class="col-xs-4">
           <img src="img/adam.jpeg" class="img-responsive" />
+          Adam Palmer
         </article>
         <article class="col-xs-4">
           <img src="img/roland.jpeg" class="img-responsive" />
+          Roland D. San Nicolas
         </article>
         <article class="col-xs-4">
           <img src="img/adam.jpeg" class="img-responsive" />
+          Edward Smith
         </article>
       </section>
       <section class="row" section="links">
-        <h2>Links!</h2>
+        <h2>Additional links</h2>
         <ul class="list-group">
           <li class="list-group-item">
             <p><a href="https://developers.google.com/youtube/">Youtube API Documentation</a></p>
@@ -54,6 +57,11 @@
           </li>
         </ul>
       </section>
+
+      <section>
+        <iframe src="https://www.youtube.com/embed/keY9eN9CD4A" width="800" height="400"></iframe>
+      </section>
+
     </main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
 <script src="vendor/styles/js/bootstrap.js"></script>
