--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
           Roland D. San Nicolas
         </article>
         <article class="col-xs-4">
-          <img src="img/adam.jpeg" class="img-responsive" />
+          <img src="img/edward.png" class="img-responsive" />
           Edward Smith
         </article>
       </section>
