made minor CSS adjustment.

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
       <p>
         Code Fellows offers many courses covering the three basic languages of web design (HTML, CSS, and Javascript), to specific languages including Ruby, Python, and Objective-C and Swift (for iOS Development). By using the following form you can discover interesting educational videos from YouTube.
       </p>
-      <p>
+      <p class="subhead indent">
         On the next page, we will explain how this works!
       </p>
     </section>
 
-    <section>
+    <section class="indent">
       <form id="VideoSelection" action="index.html" method="post">
         <ul class="list-unstyled">
           <li><input type="radio" name="prglanguage" id="html" value="html">HTML</li>
